--- a/src/css/output.css
+++ b/src/css/output.css
@@ -884,7 +884,8 @@ video {
 
 .section-content-tab {
   position: relative;
-  padding: 1.5rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
   transition-duration: 300ms;
 }
 
@@ -1390,6 +1391,11 @@ video {
   margin-right: -1.5rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -1400,9 +1406,9 @@ video {
   margin-right: auto;
 }
 
-.my-3\.5 {
-  margin-top: 0.875rem;
-  margin-bottom: 0.875rem;
+.my-1\.5 {
+  margin-top: 0.375rem;
+  margin-bottom: 0.375rem;
 }
 
 .my-4 {
@@ -1540,10 +1546,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mt-\[3\.3rem\] {
-  margin-top: 3.3rem;
 }
 
 .mt-\[68px\] {
@@ -1715,12 +1717,12 @@ video {
   height: 100vh;
 }
 
-.max-h-\[90vh\] {
-  max-height: 90vh;
+.max-h-\[136px\] {
+  max-height: 136px;
 }
 
-.max-h-\[9rem\] {
-  max-height: 9rem;
+.max-h-\[90vh\] {
+  max-height: 90vh;
 }
 
 .max-h-\[calc\(100vh-160px\)\] {
@@ -1735,8 +1737,8 @@ video {
   max-height: 100vh;
 }
 
-.min-h-\[12\.5rem\] {
-  min-height: 12.5rem;
+.min-h-\[136px\] {
+  min-height: 136px;
 }
 
 .min-h-\[491\.5px\] {
@@ -2171,6 +2173,10 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .grid-cols-6 {
@@ -3188,10 +3194,6 @@ video {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-7 {
-  padding: 1.75rem;
 }
 
 .p-8 {
@@ -5086,8 +5088,28 @@ video {
     grid-column: span 8 / span 8;
   }
 
+  .\32xl\:m-4 {
+    margin: 1rem;
+  }
+
+  .\32xl\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .\32xl\:flex {
+    display: flex;
+  }
+
   .\32xl\:h-\[80px\] {
     height: 80px;
+  }
+
+  .\32xl\:max-h-\[176px\] {
+    max-height: 176px;
+  }
+
+  .\32xl\:min-h-\[176px\] {
+    min-height: 176px;
   }
 
   .\32xl\:w-48 {
@@ -5102,12 +5124,24 @@ video {
     width: 302px;
   }
 
+  .\32xl\:max-w-2xl {
+    max-width: 42rem;
+  }
+
   .\32xl\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
+  .\32xl\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .\32xl\:gap-4 {
     gap: 1rem;
+  }
+
+  .\32xl\:gap-6 {
+    gap: 1.5rem;
   }
 
   .\32xl\:gap-8 {
@@ -5118,13 +5152,42 @@ video {
     padding: 1rem;
   }
 
+  .\32xl\:p-7 {
+    padding: 1.75rem;
+  }
+
   .\32xl\:p-8 {
     padding: 2rem;
+  }
+
+  .\32xl\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .\32xl\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .\32xl\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .\32xl\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 
   .\32xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .\32xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .\32xl\:text-base {
@@ -5135,6 +5198,11 @@ video {
   .\32xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .\32xl\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .\32xl\:text-xl {
