--- a/src/css/output.css
+++ b/src/css/output.css
@@ -590,6 +590,13 @@ video {
 
 /* Base button component */
 
+.emoji {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.25rem;
+}
+
 .section-stats-base {
   position: relative;
   border-radius: 0.375rem;
@@ -1342,6 +1349,10 @@ video {
   grid-column: span 3 / span 3;
 }
 
+.col-start-2 {
+  grid-column-start: 2;
+}
+
 .m-2 {
   margin: 0.5rem;
 }
@@ -1456,10 +1467,6 @@ video {
   margin-inline-end: 0.5rem;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -1550,6 +1557,10 @@ video {
 
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -1677,16 +1688,16 @@ video {
   height: 24rem;
 }
 
-.h-\[375px\] {
-  height: 375px;
-}
-
-.h-\[400px\] {
-  height: 400px;
-}
-
 .h-\[49px\] {
   height: 49px;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[530px\] {
+  height: 530px;
 }
 
 .h-\[80px\] {
@@ -1713,8 +1724,12 @@ video {
   max-height: 136px;
 }
 
-.max-h-\[425px\] {
-  max-height: 425px;
+.max-h-\[236px\] {
+  max-height: 236px;
+}
+
+.max-h-\[550px\] {
+  max-height: 550px;
 }
 
 .max-h-\[90vh\] {
@@ -1737,12 +1752,16 @@ video {
   min-height: 136px;
 }
 
-.min-h-\[425px\] {
-  min-height: 425px;
+.min-h-\[236px\] {
+  min-height: 236px;
 }
 
 .min-h-\[491\.5px\] {
   min-height: 491.5px;
+}
+
+.min-h-\[550px\] {
+  min-height: 550px;
 }
 
 .min-h-\[86px\] {
@@ -1863,10 +1882,6 @@ video {
 
 .w-96 {
   width: 24rem;
-}
-
-.w-\[200px\] {
-  width: 200px;
 }
 
 .w-\[235px\] {
@@ -2216,6 +2231,10 @@ video {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
+.grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -2517,6 +2536,11 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
 }
 
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity, 1));
+}
+
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
@@ -2664,6 +2688,11 @@ video {
 
 .bg-black\/80 {
   background-color: rgb(0 0 0 / 0.8);
+}
+
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-500 {
@@ -3844,6 +3873,11 @@ video {
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity, 1));
 }
 
+.ring-blue-400 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(96 165 250 / var(--tw-ring-opacity, 1));
+}
+
 .ring-orange-400 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(251 146 60 / var(--tw-ring-opacity, 1));
@@ -4196,6 +4230,21 @@ video {
 
 .hover\:bg-black\/30:hover {
   background-color: rgb(0 0 0 / 0.3);
+}
+
+.hover\:bg-blue-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-gray-200:hover {
@@ -5042,16 +5091,20 @@ video {
     height: 57px;
   }
 
-  .\32xl\:h-\[80px\] {
-    height: 80px;
-  }
-
   .\32xl\:max-h-\[176px\] {
     max-height: 176px;
   }
 
+  .\32xl\:max-h-\[276px\] {
+    max-height: 276px;
+  }
+
   .\32xl\:min-h-\[176px\] {
     min-height: 176px;
+  }
+
+  .\32xl\:min-h-\[276px\] {
+    min-height: 276px;
   }
 
   .\32xl\:w-10 {
@@ -5060,10 +5113,6 @@ video {
 
   .\32xl\:w-48 {
     width: 12rem;
-  }
-
-  .\32xl\:w-\[250px\] {
-    width: 250px;
   }
 
   .\32xl\:w-\[302px\] {
