--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1145,6 +1145,10 @@ video {
   left: -1.5rem;
 }
 
+.-right-0\.5 {
+  right: -0.125rem;
+}
+
 .-right-1 {
   right: -0.25rem;
 }
@@ -1159,6 +1163,10 @@ video {
 
 .-right-8 {
   right: -2rem;
+}
+
+.-top-0\.5 {
+  top: -0.125rem;
 }
 
 .-top-1 {
@@ -1193,6 +1201,10 @@ video {
   bottom: 2rem;
 }
 
+.bottom-\[1px\] {
+  bottom: 1px;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -1225,12 +1237,20 @@ video {
   left: 2rem;
 }
 
+.left-\[1px\] {
+  left: 1px;
+}
+
 .left-\[6px\] {
   left: 6px;
 }
 
 .right-0 {
   right: 0px;
+}
+
+.right-1 {
+  right: 0.25rem;
 }
 
 .right-1\/4 {
@@ -1269,8 +1289,16 @@ video {
   right: 1.5rem;
 }
 
+.right-\[1px\] {
+  right: 1px;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.top-1 {
+  top: 0.25rem;
 }
 
 .top-1\/2 {
@@ -1283,6 +1311,10 @@ video {
 
 .top-10 {
   top: 2.5rem;
+}
+
+.top-16 {
+  top: 4rem;
 }
 
 .top-2 {
@@ -1349,8 +1381,12 @@ video {
   grid-column: span 3 / span 3;
 }
 
-.col-start-2 {
-  grid-column-start: 2;
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.col-start-4 {
+  grid-column-start: 4;
 }
 
 .m-2 {
@@ -1600,6 +1636,10 @@ video {
   height: 0.25rem;
 }
 
+.h-1\.5 {
+  height: 0.375rem;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -1732,10 +1772,6 @@ video {
   max-height: 136px;
 }
 
-.max-h-\[236px\] {
-  max-height: 236px;
-}
-
 .max-h-\[550px\] {
   max-height: 550px;
 }
@@ -1760,10 +1796,6 @@ video {
   min-height: 136px;
 }
 
-.min-h-\[236px\] {
-  min-height: 236px;
-}
-
 .min-h-\[491\.5px\] {
   min-height: 491.5px;
 }
@@ -1786,6 +1818,10 @@ video {
 
 .w-1 {
   width: 0.25rem;
+}
+
+.w-1\.5 {
+  width: 0.375rem;
 }
 
 .w-10 {
@@ -1920,6 +1956,14 @@ video {
   min-width: 150px;
 }
 
+.min-w-\[55px\] {
+  min-width: 55px;
+}
+
+.min-w-\[75px\] {
+  min-width: 75px;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -1974,6 +2018,10 @@ video {
 
 .border-collapse {
   border-collapse: collapse;
+}
+
+.origin-top-right {
+  transform-origin: top right;
 }
 
 .-translate-x-1\/2 {
@@ -2227,6 +2275,10 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.grid-cols-10 {
+  grid-template-columns: repeat(10, minmax(0, 1fr));
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -2466,12 +2518,20 @@ video {
   border-top-right-radius: 1rem;
 }
 
+.rounded-bl {
+  border-bottom-left-radius: 0.25rem;
+}
+
 .rounded-bl-full {
   border-bottom-left-radius: 9999px;
 }
 
 .rounded-bl-lg {
   border-bottom-left-radius: 0.5rem;
+}
+
+.rounded-br {
+  border-bottom-right-radius: 0.25rem;
 }
 
 .rounded-br-lg {
@@ -2543,6 +2603,11 @@ video {
   border-top-width: 2px;
 }
 
+.border-amber-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(245 158 11 / var(--tw-border-opacity, 1));
+}
+
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
@@ -2556,6 +2621,11 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
 .border-gray-600 {
@@ -2697,6 +2767,16 @@ video {
   background-color: rgb(0 0 0 / 0.8);
 }
 
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity, 1));
+}
+
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
@@ -2710,6 +2790,16 @@ video {
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-50 {
@@ -2827,19 +2917,13 @@ video {
   background-color: rgb(254 226 226 / var(--tw-bg-opacity, 1));
 }
 
+.bg-red-300\/30 {
+  background-color: rgb(252 165 165 / 0.3);
+}
+
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
-}
-
-.bg-teal-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(94 234 212 / var(--tw-bg-opacity, 1));
-}
-
-.bg-teal-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(45 212 191 / var(--tw-bg-opacity, 1));
 }
 
 .bg-transparent {
@@ -3442,6 +3526,10 @@ video {
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .text-end {
   text-align: end;
 }
@@ -3579,6 +3667,11 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
 }
 
+.text-blue-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity, 1));
+}
+
 .text-emerald-600 {
   --tw-text-opacity: 1;
   color: rgb(5 150 105 / var(--tw-text-opacity, 1));
@@ -3682,11 +3775,6 @@ video {
 .text-slate-600 {
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity, 1));
-}
-
-.text-teal-800 {
-  --tw-text-opacity: 1;
-  color: rgb(17 94 89 / var(--tw-text-opacity, 1));
 }
 
 .text-transparent {
@@ -3824,6 +3912,11 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-black\/50 {
+  --tw-shadow-color: rgb(0 0 0 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .shadow-green-500 {
   --tw-shadow-color: #22c55e;
   --tw-shadow: var(--tw-shadow-colored);
@@ -3886,6 +3979,21 @@ video {
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity, 1));
 }
 
+.ring-blue-500 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity, 1));
+}
+
+.ring-blue-600 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity, 1));
+}
+
+.ring-gray-100 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(243 244 246 / var(--tw-ring-opacity, 1));
+}
+
 .ring-orange-400 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(251 146 60 / var(--tw-ring-opacity, 1));
@@ -3893,11 +4001,6 @@ video {
 
 .ring-orange-600\/50 {
   --tw-ring-color: rgb(234 88 12 / 0.5);
-}
-
-.ring-teal-500 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(20 184 166 / var(--tw-ring-opacity, 1));
 }
 
 .ring-opacity-5 {
@@ -4236,6 +4339,10 @@ video {
   border-color: rgb(253 224 71 / var(--tw-border-opacity, 1));
 }
 
+.hover\:bg-amber-100\/50:hover {
+  background-color: rgb(254 243 199 / 0.5);
+}
+
 .hover\:bg-amber-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(245 158 11 / var(--tw-bg-opacity, 1));
@@ -4243,6 +4350,15 @@ video {
 
 .hover\:bg-black\/30:hover {
   background-color: rgb(0 0 0 / 0.3);
+}
+
+.hover\:bg-blue-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-blue-500\/50:hover {
+  background-color: rgb(59 130 246 / 0.5);
 }
 
 .hover\:bg-gray-100:hover {
@@ -4288,10 +4404,6 @@ video {
 .hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-teal-500\/50:hover {
-  background-color: rgb(20 184 166 / 0.5);
 }
 
 .hover\:bg-white:hover {
@@ -5060,34 +5172,12 @@ video {
     grid-column: span 8 / span 8;
   }
 
-  .\32xl\:m-4 {
-    margin: 1rem;
-  }
-
-  .\32xl\:mx-4 {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
-  .\32xl\:my-3\.5 {
-    margin-top: 0.875rem;
-    margin-bottom: 0.875rem;
-  }
-
   .\32xl\:mb-6 {
     margin-bottom: 1.5rem;
   }
 
-  .\32xl\:mt-4 {
-    margin-top: 1rem;
-  }
-
   .\32xl\:mt-6 {
     margin-top: 1.5rem;
-  }
-
-  .\32xl\:flex {
-    display: flex;
   }
 
   .\32xl\:h-10 {
@@ -5096,22 +5186,6 @@ video {
 
   .\32xl\:h-\[57px\] {
     height: 57px;
-  }
-
-  .\32xl\:max-h-\[176px\] {
-    max-height: 176px;
-  }
-
-  .\32xl\:max-h-\[276px\] {
-    max-height: 276px;
-  }
-
-  .\32xl\:min-h-\[176px\] {
-    min-height: 176px;
-  }
-
-  .\32xl\:min-h-\[276px\] {
-    min-height: 276px;
   }
 
   .\32xl\:w-10 {
@@ -5126,10 +5200,6 @@ video {
     width: 302px;
   }
 
-  .\32xl\:max-w-2xl {
-    max-width: 42rem;
-  }
-
   .\32xl\:max-w-xl {
     max-width: 36rem;
   }
@@ -5142,10 +5212,6 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .\32xl\:gap-2 {
-    gap: 0.5rem;
-  }
-
   .\32xl\:gap-4 {
     gap: 1rem;
   }
@@ -5154,46 +5220,13 @@ video {
     gap: 1.5rem;
   }
 
-  .\32xl\:p-4 {
-    padding: 1rem;
-  }
-
-  .\32xl\:p-7 {
-    padding: 1.75rem;
-  }
-
   .\32xl\:p-8 {
     padding: 2rem;
-  }
-
-  .\32xl\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .\32xl\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .\32xl\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
-  .\32xl\:py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
   }
 
   .\32xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .\32xl\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 
   .\32xl\:text-base {
